--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,dotenv,windows,macos
+# Local Netlify folder
+.netlify
